--- a/codingNinjas/Frontend/MusicPlayer/styles/shared.css
+++ b/codingNinjas/Frontend/MusicPlayer/styles/shared.css
@@ -878,3 +878,22 @@ body{
         background-position: right;
     }
 }
+
+/* Hover Play Icon */
+.hover-play-overlay{
+    position: relative;
+    cursor: pointer;
+}
+/*
+.hover-play-overlay::after{
+    content: "<i class=\"fas fa-play hover-play-overlay-text\"></i>";
+}
+.hover-play-overlay-text{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    z-index: 5;
+    transform: translateX(-50%) translateY(-50%);
+}*/
