MusicPlayer: Artist pages now open by using artistid in session storage and populate the artist.html page accordingly.

--- a/codingNinjas/Frontend/MusicPlayer/styles/shared.css
+++ b/codingNinjas/Frontend/MusicPlayer/styles/shared.css
@@ -127,6 +127,11 @@ ul{
   transition: none !important;
 }
 
+a:-webkit-any-link{
+    text-decoration: none;
+    color: inherit;
+}
+
 /*===================================================
     3.UTILITIES: Mobile first layout
 =====================================================*/
